--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,12 @@ body{
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main-container{
+  width: 100%;
+  min-width: 288px;
+}
+
+
 select {
   border: 0 none;
   color: white;
@@ -25,11 +31,6 @@ select {
   margin: 0 10%;
   padding-bottom: 25px;
   text-align: left;
-}
-
-.video-inputs {
-  display: inline-block;
-  padding: 5px;
 }
 
 input {
